--- a/rwd_style.css
+++ b/rwd_style.css
@@ -34,6 +34,7 @@ body{
 	margin:0px;
 	color: #212121;
     font: 400 16px/24px Roboto,sans-serif;
+	width:100%;
 }
 .top_header{
 	box-shadow: 0 0 4px rgba(0,0,0,.14), 0 4px 8px rgba(0,0,0,.28);
@@ -77,6 +78,7 @@ footer{
 	border-radius: 2px;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
     position: relative;
+	size:inherit;
 }
 .footer_box{
 	display:block;
@@ -114,7 +116,7 @@ li{
 	opacity .2s,width .2s,-ms-flex .2s;
     vertical-align: top;
 }
-.frame_events,.frame_news,.footer_frame{
+.frame_events,.frame_news{
 	
 	justify-content:center;
 	align-items:flex-start;padding:0.5%;
@@ -144,7 +146,8 @@ li{
 /* CSS3 Media Query */
 @media	(max-width:1200px){
 	/*如果螢幕小於 1200px，套用這個區塊的設定*/
-	.frame_events,.frame_news,.footer_frame,.group,.frame_header{
+	.frame_events,.frame_news,.footer_frame,
+	.group,.frame_header{
 		flex-wrap:wrap
 	}
 	.box,.footer_box{
@@ -157,7 +160,7 @@ li{
 		font-size:24px;
 	}
 	.box,.footer_box{
-		width:90%;
+		width:80%;
 	}
 	
 	/*漢堡選單*/
